# video-sift

./: .gitignore  CHANGELOG.md  README.md  config_utils.py  gui.py  main.py  pyappify.yml  pyproject.toml  requirements.txt  settings.example.py
.github/: release-notes-v1.2.1.md  release-notes-v1.2.2.md  release-notes-v1.2.3.md
.github/workflows/: pyappify-release.yml
