[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-sift"
version = "0.1.0"
description = "Transcribe video/audio with Whisper and summarize it with DeepSeek."
requires-python = ">=3.8"
dependencies = [
    "yt-dlp",
    "openai-whisper",
    "click",
    "pydub",
    "openai",
]

[project.scripts]
nomorevideo = "main:main"

[tool.setuptools]
py-modules = ["main"]
