[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-sift"
version = "1.2.0"
description = "Transcribe video/audio with Whisper and summarize it with DeepSeek."
requires-python = ">=3.8"
dependencies = [
    "yt-dlp",
    "openai-whisper",
    "click",
    "pydub",
    "openai",
    "PySide6",
    "PySide6-Fluent-Widgets",
    "audioop-lts; python_version >= '3.13'",
]

[project.scripts]
video-sift = "main:main"

[project.gui-scripts]
video-sift-gui = "gui:main"

[tool.setuptools]
py-modules = ["main", "gui", "config_utils"]
